--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.boost {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    width: fit-content;
+}
+
+.boost:hover .boost-slide-show-text1 {
+    margin-left: 65px;
+}
+
+.boost-moving-gradient {
+    width: fit-content;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    border: none;
+    background-size: 300% 100%;
+    border-radius: 10px;
+    padding: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.boost-moving-gradient:hover {
+    transition: 0.5s ease-in-out;
+    background-position: 100% 0px;
+}
+
+.boost-moving-gradient--blue {
+    background-image: linear-gradient(90deg, rgb(61, 135, 255), rgb(190, 61, 255), rgb(126, 61, 255), rgb(58, 134, 255));
+    box-shadow: rgb(190, 61, 255) 0px 4px 15px 0px;
+}
