--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -156,3 +156,37 @@
     transform: scale(1.02);
     opacity: 70%;
   }
+
+  .follow {
+    width: fit-content;
+    border-radius: 20px;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+  }
+
+  .follow > div {
+    width: fit-content;
+    padding: 0.3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: 20px;
+    font-family: monospace;
+    letter-spacing: 2px;
+    font-size: large;
+    cursor: pointer;
+    transition: all 0.2s;
+  }
+
+  .follow > div:hover {
+    opacity: 70%;
+  }
+
+  .follow-btn {
+    background-color: rgba(218, 218, 218, 0.952);
+  }
+
+  .followed-btn {
+    background-color: rgba(174, 169, 216, 0.952);
+  }
