--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -184,7 +184,7 @@
   }
 
   .follow-btn {
-    background-color: rgba(218, 218, 218, 0.952);
+    background-color: #dadadaf3;
   }
 
   .followed-btn {
