--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,58 @@
 
 
 
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  --speed: 20s;
+  --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+  animation: rotate var(--speed) var(--easing) alternate infinite;
+}
+
+.gradient-1 {
+  --size: 750px;
+  --speed: 20s;
+  --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+  width: var(--size);
+  height: var(--size);
+  filter: blur(calc(var(--size) / 5));
+  background-image: linear-gradient(#4377ef, #7befd0);
+  animation: rotate var(--speed) var(--easing) alternate infinite;
+  border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+  top: 50%;
+  left: 50%;
+  opacity: 20%;
+}
+
+.gradient-2 {
+  --size: 500px;
+  --speed: 20s;
+  --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+  width: var(--size);
+  height: var(--size);
+  filter: blur(calc(var(--size) / 5));
+  background-image: linear-gradient(#ef4343, #ef927b);
+  animation: rotate var(--speed) var(--easing) alternate infinite;
+  border-radius: 30% 70% 70% 30%/30% 30% 70% 70%;
+  opacity: 20%;
+}
+
+@media (min-width: 720px) {
+  .gradient-1, .gradient-2 {
+    --size: 500px;
+  }
+}
+
 .boost {
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
